--- a/public/partials/business.html
+++ b/public/partials/business.html
@@ -13,7 +13,7 @@
 </head>
 <header>
 
-    <div w3-include-html="/partials/metalplateheader.html"></div>
+    <div w3-include-html="/partials/mp_header.html"></div>
 
 </header>
 
@@ -26,159 +26,160 @@
         </div>
 
         <div class="title-page">
-            <img class="title-bg" src="../R/title-bar.png"/>
-            <h3>日本金属屋根協会</h3>
+                <div class="title-bg">
+                        
+                        <h3>日本金属屋根協会</h3>
+                </div>
+            
         </div>
 
         <div class="services-container">
 
             <div class="row" >
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                        <div class="service col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                            <div class="left" style="padding: 5px; border: 2px #CACACA solid">
+                    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                    
+                    <div class="service col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                        <div class="row">
+                            <div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding: 5px; border: 2px #CACACA solid">
                                 <img src="../R/article1.JPG"/>
 
                             </div>
 
-                            <div class="right">
-                                <div class="bullet-point-container">
-                                    <div class="bulletpoint">
+                            <div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                    <div class="bullet-point-container">
+                                        <div class="bulletpoint">
+
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <span class="service-title">屋根板金工事</span>
+                                        <div class="service-body">屋根は日々の雨風・雪などから建物を守ってくれる重要な部分です。<br> 金属屋根は、軽量であることから建物への負担が少なく地震などの揺れにも柔軟に対応します。また自由自在にデザイン・加工することができます。とりわけ、滑雪性があることから雪国の住宅には最適の素材です。<br> 新築工事にはもちろんの事、リフォーム及び雨漏り等の補修まで是非当社におまかせください。
 
                                     </div>
                                 </div>
-                                <div>
-                                    <span class="service-title">屋根板金工事</span>
-                                    <div class="service-body">屋根は日々の雨風・雪などから建物を守ってくれる重要な部分です。<br> 金属屋根は、軽量であることから建物への負担が少なく地震などの揺れにも柔軟に対応します。また自由自在にデザイン・加工することができます。とりわけ、滑雪性があることから雪国の住宅には最適の素材です。<br> 新築工事にはもちろんの事、リフォーム及び雨漏り等の補修まで是非当社におまかせください。
-
-                                    </div>
-
-                                </div>
-
                             </div>
-
                         </div>
-                        
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                    
+                    </div>
 
+                    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+           
             </div>
 
             <div class="row" >
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                        <div class="service col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                            <div class="left">
+                <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                <div class="service col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                    <div class="row">
+                        <div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                            <div class="bullet-point-container">
+                                <div class="bulletpoint" style="margin-left: 0px;">
+    
+                                </div>
+                            </div>
+                            <div>
+                                <span class="service-title">外壁工事</span>
+                                <div class="service-body">金属サンディングは、軽量であることから建物への負担を少なく地震などの揺れにも柔軟に対応します。また、防火性・耐久性などの機能性に優れた外壁材です。直線的なフォルムは美しく洗練されたデザインで大変需要が高まっております。<br> 屋根板金工事と同様、外壁工事も是非当社におまかせください。
+            
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding: 5px; border: 2px #CACACA solid">
+                                <img src="../R/article1.JPG"/>
+
+                        </div>
+                    </div>
+                </div>
+                        
+                <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+               
+            </div>
+
+            <div class="row" >
+                <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                <div class="service col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                    
+                    <div class="row">
+                        <div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding: 5px; border: 2px #CACACA solid">
+                            <img src="../R/article1.JPG"/>
+                        </div>
+
+                        <div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12" >
+                            <div class="bullet-point-container">
+                                <div class="bulletpoint">
+
+                                </div>
+                            </div>
+                            <div>
+                                <span class="service-title">シート防水工事</span>
+                                <div class="service-body">近年、金属屋根にかわり、塩化ビニール樹脂系シート防水屋根が多く採用されております。<br> 特徴として、アスファルト防水屋根に比べ三分の一から六分の一もの軽量化が可能なため建物への負担を抑えられます。また、塩害や酸性雨などの影響を受けにくく飛び火にも強いことから建物の保護に役立ちます。<br> 新築工事にはもちろんの事、リフォーム及び雨漏り等の補修まで是非当社におまかせください。
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                        
+                <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                    
+            </div>
+
+            <div class="row" >
+                    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                        <div class="service col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                            <div class="row">
+                                <div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                     <div class="bullet-point-container">
                                         <div class="bulletpoint" style="margin-left: 0px;">
-    
+        
                                         </div>
                                     </div>
                                 <div>
-                                    <span class="service-title">外壁工事</span>
-                                    <div class="service-body">金属サンディングは、軽量であることから建物への負担を少なく地震などの揺れにも柔軟に対応します。また、防火性・耐久性などの機能性に優れた外壁材です。直線的なフォルムは美しく洗練されたデザインで大変需要が高まっております。<br> 屋根板金工事と同様、外壁工事も是非当社におまかせください。
-    
+                                    <span class="service-title">雨樋設置工事</span>
+                                    <div class="service-body fonttest" >雨樋は、屋根に受けた雨水を集め壁などを濡らさず排水するための大事な部分です。外壁のイメージや屋根・壁の材質等に合わせてお客様の建物にあった雨樋をご提案いたします。
+
                                     </div>
+                                </div>
+                                </div>
+
+                                <div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding: 5px; border: 2px #CACACA solid">
+                                        <img src="../R/article1.JPG"/>
+
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                    
+            </div>
+
+            <div class="row" >
+                <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                <div class="service col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                    <div class="row">
+                        <div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding: 5px; border: 2px #CACACA solid">
+                                <img src="../R/article1.JPG"/>
+                                
+                        </div>
+
+                        <div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                            <div class="bullet-point-container">
+                                <div class="bulletpoint">
+
+                                </div>
+                            </div>
+                            <div>
+                                <span class="service-title">その他板金工事</span>
+                                <div class="service-body">水切金物、破風包・笠木等の取替え工事など、細かい部分から工事いたします。
+
                                 </div>
                             </div>
 
-                            <div class="right" style="padding: 5px; border: 2px #CACACA solid">
-                                    <img src="../R/article1.JPG"/>
-
-                            </div>
-
                         </div>
-                        
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                    
 
-            </div>
-
-            <div class="row" >
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                        <div class="service col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                            <div class="left" style="padding: 5px; border: 2px #CACACA solid">
-                                    <img src="../R/article1.JPG"/>
-                                   
-                                    
-                            </div>
-
-                            <div class="right">
-                                    <div class="bullet-point-container">
-                                            <div class="bulletpoint">
-        
-                                            </div>
-                                        </div>
-                                    <div>
-                                        <span class="service-title">シート防水工事</span>
-                                        <div class="service-body">近年、金属屋根にかわり、塩化ビニール樹脂系シート防水屋根が多く採用されております。<br> 特徴として、アスファルト防水屋根に比べ三分の一から六分の一もの軽量化が可能なため建物への負担を抑えられます。また、塩害や酸性雨などの影響を受けにくく飛び火にも強いことから建物の保護に役立ちます。<br> 新築工事にはもちろんの事、リフォーム及び雨漏り等の補修まで是非当社におまかせください。
-        
-                                        </div>
-                                    </div>
-                            </div>
-
-                        </div>
-                        
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                    
-
-            </div>
-
-            <div class="row" >
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                        <div class="service col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                            <div class="left">
-                                    <div class="bullet-point-container">
-                                            <div class="bulletpoint" style="margin-left: 0px;">
-        
-                                            </div>
-                                        </div>
-                                    <div>
-                                        <span class="service-title">雨樋設置工事</span>
-                                        <div class="service-body fonttest" >雨樋は、屋根に受けた雨水を集め壁などを濡らさず排水するための大事な部分です。外壁のイメージや屋根・壁の材質等に合わせてお客様の建物にあった雨樋をご提案いたします。
-        
-                                        </div>
-                                    </div>
-                            </div>
-
-                            <div class="right" style="padding: 5px; border: 2px #CACACA solid">
-                                    <img src="../R/article1.JPG"/>
-
-                            </div>
-
-                        </div>
-                        
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                    
-
-            </div>
-
-            <div class="row" >
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                        <div class="service col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                            <div class="left" style="padding: 5px; border: 2px #CACACA solid">
-                                    <img src="../R/article1.JPG"/>
-                                    
-                            </div>
-
-                            <div class="right">
-                                    <div class="bullet-point-container">
-                                            <div class="bulletpoint">
-        
-                                            </div>
-                                        </div>
-                                    <div>
-                                        <span class="service-title">その他板金工事</span>
-                                        <div class="service-body">水切金物、破風包・笠木等の取替え工事など、細かい部分から工事いたします。
-        
-                                        </div>
-                                    </div>
-
-                            </div>
-
-                        </div>
-                        
-                    <span class="hidden-xs hidden-sm col-md-1 col-lg-1"></span>
-                    
-
+                    </div>
+                </div>
+                <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                
             </div>
 
             <div class="gallery">
@@ -207,6 +208,8 @@
             </div>
 
     </div>
+
+        <div w3-include-html="/partials/mp_footer.html"></div>
 
         <script type="text/javascript">
 
@@ -288,48 +291,5 @@
         <script>w3.includeHTML();</script>
     </body>
 
-    <footer>
-        <div class="container">
-                <div class="row">
-                    <span class="col-lg-1 hidden-xs col-md-1 hidde-sm"></span>
-    
-                    <div class=" col-lg-4 col-md-4 widget">
-                        <img src="../R/group_logo.jpg">
-                        
-                    </div>
-                    <div class="col-lg-3 col-md-4  widget">
-                        <h2>お問い合わせ</h2>
-                        <article class="widget_content">
-                            <ul>
-                                <li><img src="../R/ic_phone_gray.png"><a>0125-23-3725</a></li>
-                                <li><img src="../R/ic_phone_gray.png"><a>FAX 0125-23-2250</a></li>
-                                <li><img src="../R/ic_location_gray.png"><a>北海道滝川市本町2丁目3番5号TSビル1階</a></li>
-                            </ul>
-                        </article>
-                    </div>
-                    <div class="col-lg-3 col-md-4  widget">
-                            <h2 class="orange">サイトマップ</h2>
-                        <ul>
-                                
-                            <li><a href="#">トップページ</a></li>
-                            <li><a href="business.html">事業内容</a></li>
-                            <li><a href="company.html">会社概要</a></li>
-                            <li><a href="contact.html">お問い合わせ</a></li>
-                            <li><a href="">NEWS</a></li>
-                        
-                        </ul>
-                    </div>
-                            <span class="col-lg-1 hidden-xs col-md-1 hidden-sm"></span>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 widget" style="text-align: center;">© 2017 | COPYRIGHT. ALL RIGHTS RESERVED <span class="pull-right">Minimize your browser »</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-    </footer>
+   
 </html>
