--- a/public/partials/company.html
+++ b/public/partials/company.html
@@ -12,7 +12,7 @@
 </head>
 <header>
 
-    <div w3-include-html="/partials/metalplateheader.html"></div>
+    <div w3-include-html="/partials/mp_header.html"></div>
 
 </header>
 
@@ -24,8 +24,11 @@
         </div>
 
         <div class="title-page">
-            <img class="title-bg" src="../R/title-bar.png"/>
-            <h3>COMPANY</h3>
+            <div class="title-bg">
+
+                <h3>COMPANY</h3>
+            </div>
+            
         </div>
 
         <div class="info-container">
@@ -243,45 +246,45 @@
             <div class="address-container">
 
                 <div class="row">
-                        <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
-                        <div class="col-lg-10 col-xs-12 col-sm-8 col-md-8" style="padding: 0px; margin: 0px; ">
-                            <div class="thumbnail-container col-sm-6 col-md-4 lg-4">
-                            <div class="thumbnail" style="margin-right: 30px;">
-                            
-                            <img src="../R/address-box-header.png" alt="...">
-                            <table>
-                                <tbody>
-                                    <tr>
-                                        <td>本社</td>
-                                    </tr>
-                                    <tr>
-                                        <td><img></td>
-                                        <td>Some weird number</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <div class="caption">
+                        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding: 0px;">
+                            <div class="lg-4 col-md-4 col-sm-6 col-xs-12">
+                                <div class="thumbnail" >
+                                
+                                <img src="../R/address-box-header.png" alt="...">
                                 <table>
                                     <tbody>
                                         <tr>
-                                            <td><img src="../R/addressbox/location.png"></td>
-                                            <td>北海道滝川市本町2丁目3番5号　ＴＳビル1階</td>
+                                            <td>本社</td>
                                         </tr>
                                         <tr>
-                                            <td><img src="../R/addressbox/call.png"></td>
-                                            <td>0125-23-3725</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="../R/addressbox/fax.png"></td>
-                                            <td>0125-23-2250</td>
+                                            <td><img></td>
+                                            <td>Some weird number</td>
                                         </tr>
                                     </tbody>
                                 </table>
-                            </div>
-                            </div>
+                                <div class="caption">
+                                    <table>
+                                        <tbody>
+                                            <tr>
+                                                <td><img src="../R/addressbox/location.png"></td>
+                                                <td>北海道滝川市本町2丁目3番5号　ＴＳビル1階</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="../R/addressbox/call.png"></td>
+                                                <td>0125-23-3725</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="../R/addressbox/fax.png"></td>
+                                                <td>0125-23-2250</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                </div>
                         </div>
-                        <div class="thumbnail-container col-sm-6 col-md-4 lg-4">
-                            <div class="thumbnail " style=" margin-left: 10px; margin-right: 10px;">
+                        <div class="lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <div class="thumbnail ">
                                     <img src="../R/address-box-header.png" alt="...">
                                     <table>
                                         <tbody>
@@ -314,8 +317,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="thumbnail-container col-sm-6 col-md-4 lg-4">
-                                <div class="thumbnail " style="margin-left: 30px;">
+                            <div class="lg-4 col-md-4 col-sm-6 col-xs-12">
+                                <div class="thumbnail ">
                                         <img src="../R/address-box-header.png" alt="...">
                                         <table>
                                             <tbody>
@@ -349,15 +352,15 @@
                                     </div>
                                 </div>
                     </div>
-                    <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
+                    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
             
                 </div>
 
                 <div class="row">
-                        <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
-                        <div class="col-lg-10 col-xs-12 col-sm-8 col-md-8" style="padding: 0px; margin: 0px; ">
-                            <div class="thumbnail-container col-sm-6 col-md-4 lg-4">
-                                <div class="thumbnail" style="margin-right: 30px;">
+                        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding: 0px;">
+                            <div class="lg-4 col-md-4 col-sm-6 col-xs-12">
+                                <div class="thumbnail">
                                 
                                     <img src="../R/address-box-header.png" alt="...">
                                     <table>
@@ -392,8 +395,8 @@
                                 </div>
                             </div>
 
-                            <div class="thumbnail-container col-sm-6 col-md-4 lg-4">
-                                    <div class="thumbnail" style="margin-left: 10px; margin-right: 10px;">
+                            <div class="lg-4 col-md-4 col-sm-6 col-xs-12">
+                                    <div class="thumbnail">
                                     
                                         <img src="../R/address-box-header.png" alt="...">
                                         <table>
@@ -428,56 +431,14 @@
                                     </div>
                                 </div>
                         </div>
-                        <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
+                        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
                 </div>
             </div>
         </div>
 
+        <div w3-include-html="/partials/mp_footer.html"></div>
+
         <script>w3.includeHTML();</script>
     </body>
 
-    <footer>
-        <div class="container">
-                <div class="row">
-                    <span class="col-lg-1 hidden-xs col-md-1 hidde-sm"></span>
-    
-                    <div class=" col-lg-4 col-md-4 widget">
-                        <img src="../R/group_logo.jpg">
-                        
-                    </div>
-                    <div class="col-lg-3 col-md-4  widget">
-                        <h2>お問い合わせ</h2>
-                        <article class="widget_content">
-                            <ul>
-                                <li><img src="../R/ic_phone_gray.png"><a>0125-23-3725</a></li>
-                                <li><img src="../R/ic_phone_gray.png"><a>FAX 0125-23-2250</a></li>
-                                <li><img src="../R/ic_location_gray.png"><a>北海道滝川市本町2丁目3番5号TSビル1階</a></li>
-                            </ul>
-                        </article>
-                    </div>
-                    <div class="col-lg-3 col-md-4  widget">
-                            <h2 class="orange">サイトマップ</h2>
-                        <ul>
-                                
-                            <li><a href="#">トップページ</a></li>
-                            <li><a href="business.html">事業内容</a></li>
-                            <li><a href="company.html">会社概要</a></li>
-                            <li><a href="contact.html">お問い合わせ</a></li>
-                            <li><a href="">NEWS</a></li>
-                        
-                        </ul>
-                    </div>
-                            <span class="col-lg-1 hidden-xs col-md-1 hidden-sm"></span>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 widget" style="text-align: center;">© 2017 | COPYRIGHT. ALL RIGHTS RESERVED <span class="pull-right">Minimize your browser »</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-    </footer>
 </html>
