--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -22,7 +22,7 @@
 </head>
 <header>
     
-    <div w3-include-html="/partials/metalplateheader.html"></div>
+    <div w3-include-html="/partials/mp_header.html"></div>
 
     </header>
     
@@ -297,56 +297,15 @@
             }
         </script> -->
 
+        <div w3-include-html="/partials/mp_footer.html"></div>
+
         <script type="text/javascript" src="../scripts/jquery.cycle2.min.js"></script>
         <script src="../plugins/facebooklikeslider/js/jquery.bxslider.js"></script>
         <script>w3.includeHTML();</script>
     </body>
 
     
-    <footer>
-        <div class="container">
-            <div class="row">
-                <span class="col-lg-1 col-md-1 hidden-sm hidden-xs "></span>
-
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 widget">
-                    <img src="../R/group_logo.jpg">
-                </div>
-
-                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 widget">
-                    <h2>お問い合わせ</h2>
-                    <article class="widget_content">
-                        <ul>
-                            <li><img src="../R/ic_phone_gray.png"><a>0125-23-3725</a></li>
-                            <li><img src="../R/ic_phone_gray.png"><a>FAX 0125-23-2250</a></li>
-                            <li><img src="../R/ic_location_gray.png"><a>北海道滝川市本町2丁目3番5号TSビル1階</a></li>
-                        </ul>
-                    </article>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 widget">
-                        <h2 class="orange">サイトマップ</h2>
-                    <ul>
-                            
-                        <li><a href="#">トップページ</a></li>
-                        <li><a href="business.html">事業内容</a></li>
-                        <li><a href="company.html">会社概要</a></li>
-                        <li><a href="contact.html">お問い合わせ</a></li>
-                        <li><a href="">NEWS</a></li>
-                    
-                    </ul>
-                </div>
-
-                <span class="col-lg-1 col-md-1 hidden-sm hidden-xs"></span>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 widget" style="text-align: center;">© 2017 | COPYRIGHT. ALL RIGHTS RESERVED <span class="pull-right">Minimize your browser »</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    
 
 
 
