--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -25,7 +25,7 @@
 
         <div class="row">
             <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12" style="padding:0px;">
+            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding:0px;">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="thumbnail">
                             <div class="logo-container">
@@ -61,7 +61,7 @@
 
             <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"> </span>
 
-            <div class="slider-container col-lg-10 col-md-10 col-sm-10 col-xs-10">
+            <div class="slider-container col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
 
                     <div class="thumbnail">
                             <div class="bxslider">
