--- a/public/partials/gs_header.html
+++ b/public/partials/gs_header.html
@@ -1,23 +1,23 @@
 
 
-  <div class="row">
-      <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-      <div class="top-info col-lg-10 col-md-10 col-sm-10 col-xs-12">
-          <span class="top-description">Taniguchi General service limited company is a company specializing in real state.</span>
-          <div class="right-container">
-          <div class="info-container">
-              <img src="../R/topsection/call.png" alt="call"/>
-              <div class="divider"></div>
-              <p class="right-text">0125-23-8170</p>
-          </div>
+<div class="row">
+    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+        <div class="top-info col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+            <span class="top-description col-lg-6 col-md-6 col-sm-6 col-xs-12">Taniguchi General service limited company is a company specializing in real state.</span>
+            <div class="right-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="info-container">
+                    <img src="../R/topsection/call.png" alt="call"/>
+                    <div class="divider"></div>
+                    <p class="right-text">0125-23-8170</p>
+                </div>
 
-              <div class="info-container">
-                  <img src="../R/topsection/ic_location.png" alt="call"/>
-                  <div class="divider"></div>
-                  <p class="right-text">2 - 3, 5 Honcho, Takikawa-shi, Hokkaido<br>073-0021 TS Building 1F</p>
-              </div>
+                <div class="info-container">
+                    <img src="../R/topsection/ic_location.png" alt="call"/>
+                    <div class="divider"></div>
+                    <p class="right-text">2 - 3, 5 Honcho, Takikawa-shi, Hokkaido<br>073-0021 TS Building 1F</p>
+                </div>
 
-      </div>
+            </div>
       </div>
       <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
   </div>
@@ -27,7 +27,7 @@
               <div class="col-lg-10 col-md-10" style="padding: 0;" >
           <!-- Fixed navbar -->
               <nav class="menu-container navbar navbar-default navbar-fixed-top" style="position: relative; margin: 0;" >
-                  <div class="container col-lg-12 col-md-12" style="background: white; margin-left: 0px; padding-left:0px; padding-right: 0px;">
+                  <div class="container col-lg-12 col-md-12" style="background: white; margin-left: 0px;">
                     <div class="navbar-header">
                       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
