--- a/public/partials/gs_footer.html
+++ b/public/partials/gs_footer.html
@@ -9,7 +9,9 @@
 
 			<div class="footer-left">
 
-				<h3>Company<span>logo</span></h3>
+				<!-- <h3>Company<span>logo</span></h3> -->
+
+				<img style="max-width: 100%" src="../R/group_logo.jpg" />
 
 				<p class="footer-links">
 					<a href="#">Home</a>
